--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Replica Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    
+     <header>
+        <img src="/img/logo.jpg" class="logo">
+        <nav>
+            <ul class="nav-list">     
+                <li class="has-submenu"><a href="#">Cuidado Facial</a></li>
+                <li class="has-submenu"><a href="#">Tipo de piel</a></li>
+                <li class="has-submenu"><a href="#">Te preocupa</a></li>
+                <li class="has-submenu"><a href="#">Cuidados corporales</a></li>
+                <li class="has-submenu"><a href="#">Maquillaje</a></li>
+                <li class="has-submenu"><a href="#">Outlet y promociones</a></li>
+                <li class="has-submenu"><a href="#">Novedades</a></li>
+                <li class="has-submenu"><a href="#">Marcas</a></li>
+            </ul> 
+        </nav>
+        <div class="icons">
+            <div id="menu-icon" class="bx bx-user"></div>
+            <div id="menu-icon" class="bx bx-search"></div>
+            <div id="menu-icon" class="bx bx-shopping-bag"></div>
+        </div>
+    </header>
+    <div class="container">
+        <div class="filter">
+            <div class="content"> 
+                <h3>EL 2DO PRODUCTO PLANET SKIN YA ESTÁ AQUÍ</h3>
+                <h2>LA PROTECCIÓN SOLAR SIN RASTRO BLANCO, DISEÑADO PARA USAR LOS 365 DÍAS DEL AÑO</h2>
+                <a><button class="btn">¡LO NECESITO!</button></a>
+                </div>
+            </div>   
+        </div>  
+    </div>
+        
+    </div>
 </body>
 </html>
