--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-     <header>
+     <header class="header-top">
         <img src="./img/logo.jpg" class="logo">
         <nav>
             <ul class="nav-list">     
