--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
      <header class="header-top">
-        <img src="./img/logo.jpg" class="logo">
+        <img src="./img/logo.jpg" class="logo" alt="logo">
         <nav>
             <ul class="nav-list">     
                 <li class="has-submenu"><a href="#">Cuidado Facial</a></li>
