--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
             <div id="menu-icon" class="bx bx-shopping-bag"></div>
         </div>
     </header>
-    <div class="container">
-        <div class="filter">
-            <div class="content"> 
-                <h3>EL 2DO PRODUCTO PLANET SKIN YA ESTÁ AQUÍ</h3>
-                <h2>LA PROTECCIÓN SOLAR SIN RASTRO BLANCO, DISEÑADO PARA USAR LOS 365 DÍAS DEL AÑO</h2>
-                <a><button class="btn">¡LO NECESITO!</button></a>
-                </div>
-            </div>   
+    <main>
+        <div class="container">
+            <div class="filter">
+                <div class="content"> 
+                    <h3>EL 2DO PRODUCTO PLANET SKIN YA ESTÁ AQUÍ</h3>
+                    <h2>LA PROTECCIÓN SOLAR SIN RASTRO BLANCO, DISEÑADO PARA USAR LOS 365 DÍAS DEL AÑO</h2>
+                    <a><button class="btn">¡LO NECESITO!</button></a>
+                    </div>
+                </div>   
+            </div>  
         </div>  
-    </div>
-        
-    </div>
+    </main>
 </body>
 </html>
